fix line spacing

--- a/css/main.css
+++ b/css/main.css
@@ -11,7 +11,7 @@ html, body {
 }
 
 body{
-	line-height: 100%
+	line-height: 1.5em;
 }
 
 p {
@@ -26,7 +26,7 @@ code, pre {
 
 .boxframe p, .boxframe ul, .boxframe ol, .header li, .boxframe figcaption{
 	font-family: "Book Antiqua", "Palatino Linotype", "Palatino LT STD", Georgia, serif;
-	line-height: 1.5em;
+	line-height: 21pt;
 }
 
 .header {
